# ballbins

./: .gitignore  README.md
data/: data.csv
data_filtered/n_to_samples/0_25/: seg_128.csv  seg_32.csv  seg_64.csv  seg_8.csv  wor_128.csv  wor_32.csv  wor_64.csv  wor_8.csv  wr.csv  wr_8.csv
data_filtered/n_to_samples/0_5/: seg_128.csv  seg_32.csv  seg_64.csv  seg_8.csv  wor_128.csv  wor_32.csv  wor_64.csv  wor_8.csv  wr.csv  wr_8.csv
data_filtered/n_to_samples/0_75/: seg_32.csv  seg_64.csv  seg_8.csv  wor_32.csv  wor_64.csv  wor_8.csv  wr.csv  wr_8.csv
data_filtered/n_to_samples/1/: seg_32.csv  seg_8.csv  wor_32.csv  wor_8.csv  wr.csv
data_filtered/samples_to_prob/1024_256/: seg_128.csv  seg_32.csv  seg_64.csv  seg_8.csv  wor_128.csv  wor_32.csv  wor_64.csv  wor_8.csv  wr.csv  wr_8.csv
data_filtered/samples_to_prob/1024_512/: seg_128.csv  seg_32.csv  seg_64.csv  seg_8.csv  wor_128.csv  wor_32.csv  wor_64.csv  wor_8.csv  wr.csv  wr_8.csv
data_filtered/samples_to_prob/1024_768/: seg_128.csv  seg_32.csv  seg_64.csv  seg_8.csv  wor_32.csv  wor_64.csv  wor_8.csv  wr.csv  wr_8.csv
data_filtered/samples_to_prob/2048_1024/: seg_32.csv  seg_64.csv  seg_8.csv  wor_32.csv  wor_64.csv  wor_8.csv  (+2 more)
filtering/: filter.sh  n_to_samples.py  samples_to_prob.py
simulation/: CMakeLists.txt  Sampler.hpp  main.cpp  parameters.hpp  simulate.cpp  simulate.hpp
simulation/samplers/: SegmentSampler.cpp  SegmentSampler.hpp  UniformWRSampler.cpp  UniformWRSampler.hpp  UniformWoRSampler.cpp  UniformWoRSampler.hpp
simulation/util/: CSVWriter.cpp  CSVWriter.hpp  Rand.cpp  Rand.hpp
(+21 files in other folders)
